🎨 Updated index.html & SCSS File

--- a/assets/sass/base/_utilities.scss
+++ b/assets/sass/base/_utilities.scss
@@ -21,6 +21,7 @@
     &-accent-1{ background: hsl(225, 100%, 94%);}
     &-accent-2{ background: hsl(245, 75%, 52%) }
     &-neutral-200 { background: hsl(225, 100%, 98%);}
+    &-neutral-100 { background: hsl(225, 100%, 100%);}
 }
 
 .br-large{ border-radius: 1.5rem; }
