--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,9 @@ p, h1, h2 {
 .bg-neutral-200 {
   background: #f5f7ff; }
 
+.bg-neutral-100 {
+  background: white; }
+
 .br-large {
   border-radius: 1.5rem; }
 
@@ -125,7 +128,9 @@ p, h1, h2 {
 body {
   font-family: "Red Hat Display", sans-serif;
   font-size: 1rem;
-  font-weight: 500;
+  font-weight: 500; }
+
+main {
   display: grid;
   min-height: 100vh;
   place-items: center;
@@ -145,7 +150,7 @@ p {
 .card {
   position: absolute;
   margin: 1.5rem;
-  max-width: 24rem;
+  max-width: 28rem;
   overflow: hidden; }
   .card__title {
     font-size: 1.6rem;
