--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -36,9 +36,15 @@ p{
 
 .card{
     position: absolute;
-    margin: 1.5rem;
+    margin: 1rem;
     max-width: 28rem;
     overflow: hidden;
+
+    &__details {
+        @media (max-width: 375px) {
+            padding: 24px;
+        }
+    }
 
     &__title{
         font-size: 1.6rem;
@@ -53,8 +59,9 @@ p{
 
 .footer{
     position: absolute;
-    z-index: -1;
+    left: 50%;
     bottom: 1rem;
+    transform: translateX(-50%);
     font-size: .6rem;
 
     &__link{
